fixed alignment added anchors

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,8 @@
    --rose: #572d6f;
    --orange-cream: #f4a259;
    --creme: #f2e9e4;
-
 }
+
 html {
     background: var(--deep);
     width: 100%;
@@ -32,15 +32,17 @@ body {
     padding: 5px;
     gap: 25px;
     overflow: hidden;
+    
 }
 .sideBar {
-    background:var(--greenish);
+    /* background:var(--greenish); */
     width: 25%;
     height: 97vh;
-    text-align: center; 
-}
-.sideBar h2 {
-    padding-top: 85%;
+    display: flex;
+    flex-direction:column;
+    flex-wrap:nowrap;
+    justify-content: center;
+    align-items: center; 
 }
 .dataMain {
     width: 70vw;
@@ -58,15 +60,17 @@ body {
     margin: 0;
     height: 250px;
     padding-left: 5px;
-
-    
 }
 .webVisitors {
     background: var(--sunflower);
-    height: 65.3vh;
+    height: 63vh;
     width: 100%;
 }
+.webVisitors h2 {
+    padding: 20px 5px;
+}
 .webVisitors p {
+    padding-left: 5px;
     padding-bottom: 60px;
 }
 .graph {
